website/versioned_docs/version-4.x/advanced/schema-validation.mdx
---
title: Schema validation
description: The Cerberus validation schema for the manual-mode config file
sidebar_position: 3
---

This is the [Cerberus](https://docs.python-cerberus.org/en/stable/) validation
schema applied to the **manual-mode** `config.yaml`. In
[events mode](/docs/v4/configuration/events-mode), the aggregated result is
validated against the same schema after the events have been processed.

```yaml
shares:
  type: list
  required: True
  empty: False
  schema:
    type: dict
    required: True
    schema:
      name:
        type: string
        required: True
      symbol:
        type: string
        required: True
      purchase:
        type: dict
        required: True
        schema:
          quantity:
            type: number
            required: True
            min: 0
          fee:
            type: number
            required: True
            min: 0
          cost_price:
            type: number
            required: True
            min: 0
      estate:
        type: dict
        required: True
        schema:
          quantity:
            type: number
            required: True
            min: 0
          received_dividend:
            type: number
            required: True
            min: 0
```